--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,13 +8,14 @@
     {
       "files": ["*.ts"],
       "extends": [
+        "airbnb-base",
+        "airbnb-typescript/base",
         "eslint:recommended",
         "plugin:import/recommended",
         "plugin:@typescript-eslint/recommended",
         "plugin:@angular-eslint/recommended",
         "plugin:@angular-eslint/template/process-inline-templates",
-        "plugin:prettier/recommended",
-        "airbnb-typescript/base"
+        "plugin:prettier/recommended"
       ],
       "rules": {
         "@angular-eslint/directive-selector": [
@@ -33,7 +34,8 @@
             "style": "kebab-case"
           }
         ],
-        "@typescript-eslint/no-explicit-any": "error"
+        "@typescript-eslint/no-explicit-any": "error",
+        "import/prefer-default-export": "off"
       }
     },
     {
