--- a/package.json
+++ b/package.json
@@ -8,15 +8,18 @@
     "watch": "ng build --watch --configuration development",
     "deploy": "ng deploy --base-href=https://rolling-scopes-school.github.io/yumentsel-ANGULAR2023Q4/",
     "lint": "ng lint",
+    "lint-fix": "ng lint --fix",
     "test": "ng test"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "^16.2.0",
+    "@angular/cdk": "^16.2.10",
     "@angular/common": "^16.2.0",
     "@angular/compiler": "^16.2.0",
     "@angular/core": "^16.2.0",
     "@angular/forms": "^16.2.0",
+    "@angular/material": "^16.2.10",
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
