--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -35,7 +35,8 @@
           }
         ],
         "@typescript-eslint/no-explicit-any": "error",
-        "import/prefer-default-export": "off"
+        "import/prefer-default-export": "off",
+        "class-methods-use-this": "off"
       }
     },
     {
