--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "deploy": "ng deploy --base-href=https://rolling-scopes-school.github.io/yumentsel-ANGULAR2023Q4/",
     "lint": "ng lint",
     "lint-fix": "ng lint --fix",
-    "test": "ng test"
+    "test": "jest",
+    "test-coverage": "jest --coverage",
+    "test:watch": "jest --watch"
   },
   "private": true,
   "dependencies": {
@@ -28,6 +30,7 @@
     "@ngrx/store-devtools": "^16.3.0",
     "nanoid": "^5.0.3",
     "rxjs": "~7.8.0",
+    "ts-node": "^10.9.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
@@ -41,7 +44,7 @@
     "@angular/cli": "^16.2.7",
     "@angular/compiler-cli": "^16.2.0",
     "@ngrx/eslint-plugin": "^16.3.0",
-    "@types/jasmine": "~4.3.0",
+    "@types/jest": "^29.5.10",
     "@typescript-eslint/eslint-plugin": "5.62.0",
     "@typescript-eslint/parser": "5.62.0",
     "angular-cli-ghpages": "^1.0.7",
@@ -51,12 +54,8 @@
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-import": "^2.28.1",
     "eslint-plugin-prettier": "^5.0.1",
-    "jasmine-core": "~4.6.0",
-    "karma": "~6.4.0",
-    "karma-chrome-launcher": "~3.2.0",
-    "karma-coverage": "~2.2.0",
-    "karma-jasmine": "~5.1.0",
-    "karma-jasmine-html-reporter": "~2.1.0",
+    "jest": "^29.7.0",
+    "jest-preset-angular": "^13.1.4",
     "prettier-eslint": "^16.1.1",
     "typescript": "~5.1.3"
   }
